[tool.poetry]
name = "patronite-db-api"
version = "0.1.0"
description = ""
authors = ["Tomasz Chabinka <tomaszchabinka@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.111.0"
mangum = "^0.17.0"
influxdb3-python = "^0.5.0"
pandas = "^2.2.2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
